--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
 
 <body>
     <div class="container">
+
+        <nav>
+            <div class="header-section">
+                <div class="logo">
+                        <img class="logo" src="img/lambda-black.png" alt="Lambda logo.">
+                </div>
+                <div class="links">
+                        <a href= "">Home</a>
+                        <a href="">About</a>
+                        <a href="">Products</a>
+                        <a href="">Blog</a>
+                        <a href="">Contact</a>
+                </div>
+            </div>
+            
+            
+        </nav>
    
         <section class="top-content">
             <div class="text-container">
