header image inserted

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
                         <a href="">Blog</a>
                         <a href="">Contact</a>
                 </div>
-            </div>
-            
-            
+            </div>          
         </nav>
+
+        <section class="header-image">
+                <img src="img/jumbo.jpg" alt="Image of a code snippet.">
+        </section>
    
         <section class="top-content">
             <div class="text-container">
