--- a/about.html
+++ b/about.html
@@ -11,6 +11,25 @@
 
 </head>
 
+<nav>
+    <div class="header-section">
+        <div class="logo">
+                <img class="logo" src="img/lambda-black.png" alt="Lambda logo.">
+        </div>
+        <div class="links">
+                <a href= "index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="">Products</a>
+                <a href="">Blog</a>
+                <a href="">Contact</a>
+        </div>
+    </div>          
+</nav>
+
+<header class="header-image" id="about-page">
+        <img src="img/jumbo-about.png" alt="Image of a code snippet.">
+</header>
+
 <body>
     <div class="container about-page">
      
