--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                         <img class="logo" src="img/lambda-black.png" alt="Lambda logo.">
                 </div>
                 <div class="links">
-                        <a href= "">Home</a>
-                        <a href="">About</a>
+                        <a href="index.html">Home</a>
+                        <a href="about.html">About</a>
                         <a href="">Products</a>
                         <a href="">Blog</a>
                         <a href="">Contact</a>
@@ -29,9 +29,9 @@
             </div>          
         </nav>
 
-        <section class="header-image">
+        <header class="header-image">
                 <img src="img/jumbo.jpg" alt="Image of a code snippet.">
-        </section>
+        </header>
    
         <section class="top-content">
             <div class="text-container">
