--- a/index.html
+++ b/index.html
@@ -14,20 +14,18 @@
 <body>
     <div class="container">
 
-        <nav>
-            <div class="header-section">
-                <div class="logo">
-                        <img class="logo" src="img/lambda-black.png" alt="Lambda logo.">
-                </div>
-                <div class="links">
-                        <a href="index.html">Home</a>
-                        <a href="about.html">About</a>
-                        <a href="">Products</a>
-                        <a href="">Blog</a>
-                        <a href="">Contact</a>
-                </div>
-            </div>          
-        </nav>
+            <nav>
+                    <div class="logo">
+                            <img class="logo" src="img/lambda-black.png" alt="Lambda logo.">
+                          </div>
+                    <div class="links">
+                      <a href= "index.html">Home</a>
+                      <a href="about.html">About</a>
+                      <a href="">Product</a>
+                      <a href="">Blog</a>
+                      <a href="">Contact</a>
+                    </div>
+              </nav>
 
         <header class="header-image">
                 <img src="img/jumbo.jpg" alt="Image of a code snippet.">
